--- a/web/src/index.css
+++ b/web/src/index.css
@@ -16,6 +16,9 @@
   .nav-button {
     @apply text-xl text-center my-auto mx-2 px-2  hover:text-sky-600;
   }
+  .skill-icon {
+    @apply shadow px-1 w-16 h-16 flex justify-center items-center m-2;
+  }
 }
 
 .blinking-cursor {
