--- a/web/src/index.css
+++ b/web/src/index.css
@@ -17,7 +17,7 @@
     @apply text-xl text-center my-auto mx-2 px-2  hover:text-sky-600;
   }
   .skill-icon {
-    @apply shadow-md p-2 w-16 h-16 flex justify-center items-center m-2;
+    @apply shadow-md p-2 w-16 h-16 flex justify-center items-center m-2 rounded-lg;
   }
 }
 
