--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,6 +19,9 @@
   .skill-icon {
     @apply shadow-md p-2 w-16 h-16 flex justify-center items-center m-2 rounded-lg;
   }
+  .my-work-link {
+    @apply  hover:underline;
+  }
 }
 
 .blinking-cursor {
